added code for weather cast

--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <title>Weather Dashboard</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    Hello
+  <div class="container">
+    <h1>🌦 Weather Dashboard</h1>
+    
+    <input type="text" id="cityInput" placeholder="Enter city name" />
+    <button onclick="getWeather()">Get Weather</button>
+
+    <div id="weatherResult"></div>
+
+    <h3>Search History</h3>
+    <ul id="historyList"></ul>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
